# Rade

./: Cargo.toml
src/: cpu.rs  device.rs  functional.rs  lib.rs  ndarray.rs  nn.rs  operation.rs  optim.rs  tensor.rs  type_trait.rs
src/cpu/: ops.rs  tile.rs
src/nn/: model.rs
