[package]
name = "rade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"
rand = "0.8.5"
rand_distr = "0.4.3"
bincode = "2.0.0-rc.3"
blas-src = { version = "0.9.0", features = ["accelerate"] }
log = "0.4.20"
