[package]
name = "rade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.19"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.203"
bincode = "1.3.3"
blas-src = { version = "0.10.0", features = ["accelerate"] }
half = { version = "2.4.1", features = ["num-traits", "rand_distr", "serde"] }
